--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -70,7 +70,7 @@
                 </button>
             </td>
             <td mat-footer-cell *matFooterCellDef>
-                <button mat-raised-button color="primary" class="float-right">Proceed to
+                <button (click)="onCheckout()" mat-raised-button color="primary" class="float-right">Proceed to
                     checkout</button>
             </td>
         </ng-container>
